Dam156-Optimize code (#127)
* remove usage of full package name and never used imports

* update developer to accessor

* optimize code

* fix sonarqube issue

* fix sonarqube issue

---------

Co-authored-by: Kevin Zhang <kevinzhang@git.com>